# uv-stale-egg-info-test

./: .gitignore  README.md  pip-install.sh  pyproject.toml  uv-pip-install.sh
member/: __init__.py  pyproject.toml
src/: __init__.py
workspace-member-in-subdir/: pyproject.toml
workspacemember/: __init__.py  pyproject.toml
