[project]
name = "uv-git-workspace-in-root"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "konstin", email = "konstin@mailbox.org" }
]
requires-python = ">=3.12"
dependencies = ["workspace-member-in-subdir"]

[tool.uv.sources]
uv-git-workspace-in-root = { workspace = true }
workspace-member-in-subdir = { editable = true, path = "workspace-member-in-subdir" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
