[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64"]

[project]
name = "workspace-in-root"
version = "0.1.0"
description = "Add your description here"
authors = [
  {name = "konstin", email = "konstin@mailbox.org"}
]
requires-python = ">=3.12"
dependencies = ["workspace-member"]

[tool.setuptools]
packages = ["workspace_in_root"]

[tool.setuptools.package-dir]
workspace_in_root = "src"

[tool.uv.sources]
workspace-in-root = {workspace = true}
workspace-member = {editable = true, path = "workspacemember"}
