[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]

[project]
authors = [
    {email = "konstin@mailbox.org", name = "konstin"},
]
dependencies = ["workspace-member"]
dynamic = ["version"]
name = "workspace-with-root-dependency-test"
requires-python = ">=3.12"

[tool.setuptools]
packages = ["workspace_with_root_dependency_test"]

[tool.setuptools.package-dir]
workspace_with_root_dependency_test = "src"

[tool.setuptools_scm]
version_file = "src/version.py"

[tool.uv.sources]
workspace-member = {editable = true, path = "workspacemember"}
workspace-with-root-dependency-test = {workspace = true}
