[project]
name = "member"
dynamic = ["version"]
authors = [
    { name = "Charlie Marsh", email = "charlie@astral.sh" }
]
dependencies = ["setuptools"]
requires-python = ">=3.12"

[tool.setuptools.packages.find]
include = ["member*"]
where = [".."]

[tool.setuptools_scm]
root = ".."
version_file = "version.py"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]
