[project]
name = "workspace-member-in-subdir"
version = "0.1.0"
description = "Add your description here"
authors = [
  { name = "konstin", email = "konstin@mailbox.org" }
]
requires-python = ">=3.12"
dependencies = ["uv-git-workspace-in-root"]

[tool.uv.sources]
uv-git-workspace-in-root = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
