[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]

[project]
authors = [
    {email = "konstin@mailbox.org", name = "konstin"},
]
dependencies = ["setuptools"]
dynamic = ["version"]
name = "workspace-member"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
include = ["workspacemember*"]
where = [".."]

[tool.setuptools_scm]
root = ".."
version_file = "version.py"
